--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "vue": "^3.2.23",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.12",
+    "vue-sweetalert2": "^5.0.5",
     "vue3-tabs-component": "^1.0.7",
     "vuex": "^4.0.2"
   },
