--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "@coreui/vue-chartjs": "2.0.0",
     "@meforma/vue-toaster": "^1.3.0",
     "core-js": "^3.19.0",
-    "form-serialize": "^0.7.2",
     "laravel-vue-pagination": "^3.0.0",
     "vue": "^3.2.23",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.12",
+    "vue-select": "^4.0.0-beta.3",
     "vue-sweetalert2": "^5.0.5",
     "vue3-tabs-component": "^1.0.7",
     "vuex": "^4.0.2"
