--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@meforma/vue-toaster": "^1.3.0",
     "core-js": "^3.19.0",
     "laravel-vue-pagination": "^3.0.0",
+    "lodash": "^4.17.21",
     "vue": "^3.2.23",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.12",
