--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "coreui_library_short_version": "4.1"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-build-classic": "^34.0.0",
-    "@ckeditor/ckeditor5-vue": "^4.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^34.1.0",
+    "@ckeditor/ckeditor5-vue": "^4.0.1",
     "@coreui/chartjs": "^3.0.0",
     "@coreui/coreui": "^4.1.0",
     "@coreui/icons": "^2.1.0",
@@ -32,31 +32,32 @@
     "@coreui/vue": "^4.1.0",
     "@coreui/vue-chartjs": "2.0.0",
     "@meforma/vue-toaster": "^1.3.0",
-    "core-js": "^3.19.0",
+    "core-js": "^3.22.8",
+    "dropzone": "^6.0.0-beta.2",
     "laravel-vue-pagination": "^3.0.0",
     "lodash": "^4.17.21",
-    "vue": "^3.2.23",
+    "vue": "^3.2.37",
     "vue-multiselect": "^3.0.0-alpha.2",
     "vue-router": "^4.0.12",
     "vue-select": "^4.0.0-beta.3",
     "vue-sweetalert2": "^5.0.5",
-    "vue3-tabs-component": "^1.0.7",
+    "vue3-tabs-component": "^1.0.8",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/core": "^7.18.2",
     "@vue/cli-plugin-babel": "~5.0.0-rc.1",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
     "@vue/cli-plugin-vuex": "~5.0.0-rc.1",
     "@vue/cli-service": "~5.0.0-rc.1",
-    "@vue/test-utils": "^2.0.0-0",
+    "@vue/test-utils": "^2.0.0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "babel-jest": "^27.0.6",
     "cypress": "^8.7.0",
     "jest": "^27.0.5",
-    "sass": "^1.32.7",
+    "sass": "^1.52.2",
     "sass-loader": "^12.0.0"
   }
 }
