--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@coreui/vue": "^4.1.0",
     "@coreui/vue-chartjs": "2.0.0",
     "@meforma/vue-toaster": "^1.3.0",
+    "axios": "^0.27.2",
     "core-js": "^3.22.8",
     "dropzone": "^6.0.0-beta.2",
     "laravel-vue-pagination": "^3.0.0",
